# archive

./: .gitignore  pyproject.toml
.github/: README.md
archive/: main.py  utils.py
data/007bbfb7/: 007bbfb7.0.json  007bbfb7.1.json  007bbfb7.10.json  007bbfb7.100.json  007bbfb7.1000.json  007bbfb7.10000.json  007bbfb7.10001.json  007bbfb7.10002.json  007bbfb7.10003.json  007bbfb7.10004.json  007bbfb7.10005.json  007bbfb7.10006.json  007bbfb7.10007.json  007bbfb7.10008.json  007bbfb7.10009.json  007bbfb7.1001.json  007bbfb7.10010.json  007bbfb7.10011.json  007bbfb7.10012.json  007bbfb7.10013.json  007bbfb7.10014.json  007bbfb7.10015.json  007bbfb7.10016.json  007bbfb7.10017.json  007bbfb7.10018.json  007bbfb7.10019.json  007bbfb7.1002.json  007bbfb7.10020.json  007bbfb7.10021.json  007bbfb7.10022.json  007bbfb7.10023.json  007bbfb7.10024.json  007bbfb7.10025.json  007bbfb7.10026.json  007bbfb7.10027.json  007bbfb7.10028.json  007bbfb7.10029.json  007bbfb7.1003.json  007bbfb7.10030.json  007bbfb7.10031.json  (+65496 more)
data/original/: sample_submission.json
data/temp/007bbfb7/: 0.json  1.json  10.json  100.json  1000.json  10000.json  10001.json  10002.json  10003.json  10004.json  10005.json  10006.json  10007.json  10008.json  10009.json  1001.json  10010.json  10011.json  10012.json  10013.json  10014.json  10015.json  10016.json  10017.json  10018.json  10019.json  1002.json  10020.json  10021.json  10022.json  10023.json  10024.json  10025.json  10026.json  10027.json  10028.json  10029.json  1003.json  10030.json  10031.json  (+32728 more)
data/temp/00d62c1b/: 0.json  1.json  10.json  (+32765 more)
(+196608 files in other folders)
